# kitak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
shaders/: eth_vanity.metal
src/: cli.rs  error.rs  file.rs  flags.rs  lib.rs  main.rs
src/keys_and_address/: btc.rs  eth.rs  mod.rs  sol.rs
src/vanity_addr_generator/: chain.rs  comp.rs  eth_search.rs  keccak_simd.rs  metal_search.rs  mod.rs  vanity_addr.rs
tests/: cli_tests.rs  integration_tests.rs
